--- a/Table.css
+++ b/Table.css
@@ -1,12 +1,11 @@
 h2{
-  text-align: center;
- color: lightseagreen;
+  color: lightseagreen;
   text-shadow: 20px 10px 15px ;
 }
 
 
 p{
-  text-align: center;
+  font-size: large;
   font-family: cursive;
 }
 
@@ -47,19 +46,33 @@ table{
 
 
 .Image{
-  background-image: url("D:/Ajaypal Singh/Fun/Corona.jpg");
+  background-image: url("Corona.jpg");
 }
 
 
 #image{
-  width: 25%;
   position: relative;
-  right: -38%;
+  height: 300px;
+  right: -37%;
 }
 
 
-.paragraph{
-  font-size: large;
+#brazil{
+  position: relative;
+  height: 300px;
+  padding: 10px;
+  border: 20px solid steelblue;
+}
+
+
+.div1{
+  text-align: center;
+}
+
+.div2{
+  text-align: left;
+  position: relative;
+  right: -2%
 }
 
 
