--- a/Table.css
+++ b/Table.css
@@ -1,28 +1,42 @@
+h1,h2 {
+  text-shadow: 4px 3px 4px darkgoldenrod;
+  border: 5px solid darkgray;
+  background-color: teal;
+  border-radius: 20px;
+  width: 405px;
+  text-align: center;
+}
+
+
+body {
+  background-color: cadetblue;
+}
+  
+
+table {
+  font-size: large;
+  font-family: cursive;
+  border-spacing: 30px;
+  text-align: center;  
+  border: 10px solid darkslategrey;
+  background-image: url("Corona.jpg");
+  padding: 10px;
+  background-size: cover;
+  box-shadow: 30px 30px 10px;
+}
 
 
 img {
   height: 350px;
   width: 350px;
   padding: 10px;
-  border: 20px solid steelblue;
+  border: 20px solid royalblue;
 }
 
 
 p {
   font-size: large;
   font-family: cursive;
-}
-
-
-table {
-  font-size: large;
-  border-spacing: 30px;
-  text-align: center;  
-  margin-left: 300px;
-  font-family: cursive;
-  border: 10px solid lightgray;
-  background-image: url("Corona.jpg");
-  padding: 10px;
 }
 
 
@@ -51,60 +65,23 @@ tr.mediumseagreen {
 }
 
 
-div.div1 {
-  text-align: center;
-}
-
-div.div2 {
-  margin-left: 20px;
- }
-
-
-div.div3 {
-  text-align: right;
-  position: relative;
-  bottom: 640px;
-  margin-right: 20px;
+#img-design {
+  height: 410px;
+  width: 413px;
+  border: none;
+  padding: 0px;
 }
 
 
-div.div4 {
-  margin-left: 20px;
-  position: relative;
-  bottom: 550px
+#table {
+  display: flex;
+  flex-direction:column; 
+  align-items: center;
 }
 
 
-div.div5 {
-  text-align: right;
-  margin-right: 20px;
-  position: relative;
-  bottom: 1200px; 
-} 
-
-
-#style {
-  text-align: center;
-  color: darkblue;
-  text-shadow: 5px 6px 10px
-}
-
-
-#image {
-  margin-left: 34%;
-  width:450px; 
-  height: 280px;
-  border-style: none;
-}
-
-
-#brazil,#russia {
-  width: 410px;
-  text-align: center;
-}
-
-
-#india,#southafrica {
-  width-right: 205px;
-  text-align: center;
+#united-state {
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
 }
